# godot-lang

./: godot-lang.cabal  nixpkgs.nix  package.yaml  readme.md
gd-autogen/: CliMsg.gd  CliMsgDir.gd  Dir.gd  SrvMsg.gd  common.gd
spec/Godot/: LangSpec.hs
src/Godot/: Lang.hs
src/Godot/Lang/: Class.hs  Core.hs  Format.hs  Functions.hs  Kind.hs  TH.hs  Trans.hs  Util.hs
src/Godot/Lang/Example/: CliMsg.hs  Common.hs  SrvMsg.hs  TH.hs  TH2.hs
src/Godot/Lang/Kind/: General.hs
