cabal-version: 2.2

name:           godot-lang
version:        0.1.0.0
synopsis:       Generation of Godot classes from Haskell types
author:         Vito Canadi
maintainer:     vito.canadi@gmail.com
license:        NONE
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    CHANGELOG.md

library
  exposed-modules:
      Godot.Lang.Class
      Godot.Lang.Core
      Godot.Lang.Example.CliMsg
      Godot.Lang.Example.Common
      Godot.Lang.Example.SrvMsg
      Godot.Lang.Example.TH
      Godot.Lang.Format
      Godot.Lang.Functions
      Godot.Lang.TH
      Godot.Lang.Trans
      Godot.Lang.Util
  other-modules:
      Paths_godot_lang
  autogen-modules:
      Paths_godot_lang
  hs-source-dirs:
      src
  default-extensions:
      LambdaCase
      OverloadedStrings
      DefaultSignatures
      ScopedTypeVariables
      TypeApplications
      DeriveGeneric
  ghc-options: -Wall -Werror=redundant-constraints -Werror=unused-imports
  build-depends:
    , base >=4.7 && <5
    , containers >= 0.6.7 && < 0.7
    , interpolate >= 0.2.1 && < 0.3
    , lens >= 5.2.3 && < 5.3
    , linear >= 1.22 && < 1.23
    , template-haskell >= 2.20.0 && < 2.21
    , text >= 2.0.2 && < 2.1
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Godot.LangSpec
      Paths_godot_lang
  autogen-modules:
      Paths_godot_lang
  hs-source-dirs:
      spec
  default-extensions:
      LambdaCase
      OverloadedStrings
      DefaultSignatures
      ScopedTypeVariables
      TypeApplications
      DeriveGeneric
  ghc-options: -Wall -Werror=redundant-constraints -Werror=unused-imports
  build-depends:
    , base >=4.7 && <5
    , containers >= 0.6.7 && < 0.7
    , interpolate >= 0.2.1 && < 0.3
    , lens >= 5.2.3 && < 5.3
    , linear >= 1.22 && < 1.23
    , template-haskell >= 2.20.0 && < 2.21
    , text >= 2.0.2 && < 2.1
    , godot-lang
    , hspec
  default-language: Haskell2010
